<resources>
    <string name="app_name">Bitdisc</string>

    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign out</string>
    <string name="action_signin">Sign in</string>
    <string name="action_create_course">Create course</string>
    <string name="action_create_hole">Create hole</string>
    <string name="action_add_hole">Add hole</string>
    <string name="action_edit_course">Edit course</string>
    <string name="action_edit_hole">Edit hole</string>
    <string name="action_new_game">New game</string>
    <string name="action_start_game">Start game</string>
    <string name="action_finish_game">Finish game</string>
    <string name="action_edit_game">Edit game</string>
    <string name="action_play_game">Play game</string>

    <string name="title_activity_main">Bitdisc</string>
    <string name="title_activity_user">Users</string>
    <string name="title_activity_course">Courses</string>
    <string name="title_activity_user_detail">User details</string>
    <string name="title_activity_course_edit">Edit course</string>
    <string name="title_activity_hole_edit">Edit Hole</string>
    <string name="title_activity_hole_detail">Hole details</string>
    <string name="title_activity_game">Games</string>
    <string name="title_activity_game_edit">Game setup</string>
    <string name="title_activity_game_play">Scorecard</string>
    <string name="title_activity_game_detail">Game details</string>
    <string name="title_activity_course_detail">Course details</string>

    <string name="course_name">Course Name</string>
    <string name="holes">Holes</string>
    <string name="stats">Stats</string>

    <string name="hello_world">Hello world!</string>
    <string name="select_course">Select course</string>
    <string name="select_players">Select players</string>
    <string name="add_player">Add player</string>
    <string name="add_guest">Add guest</string>
    <string name="action_remove">Remove</string>
    <string name="welcome">Welcome</string>
    <string name="games">Games</string>
    <string name="courses">Courses</string>
    <string name="players">Players</string>
    <string name="ufo">Ufo</string>
    <string name="game_course">Game Course</string>
    <string name="three_players">3 players(s)</string>
    <string name="a_time">2015-05-21 17:00:00</string>
    <string name="double_0">00</string>
    <string name="par_4_hole">Par 4 hole</string>
    <string name="onehundreadanninety_meters">190 meters</string>
    <string name="user_name">User Name</string>
    <string name="sixtyseven">67</string>
    <string name="avatar">Avatar</string>
    <string name="par_sixtyfive">Par: 65</string>
    <string name="action_save_course">Save course</string>
    <string name="action_save_hole">Save hole</string>
    <string name="eighteen_holes">18 holes</string>
    <string name="action_set_map">Set map</string>
    <string name="course_map">Course map</string>
    <string name="action_unset_map">Unset map</string>
    <string name="hole_map">Hole map</string>
    <string name="zero">0</string>
    <string name="hole_par">Hole par</string>
    <string name="hole_distance">Hole distance [meters]</string>
    <string name="friends">Friends</string>
    <string name="par">Par</string>
    <string name="city">City</string>
    <string name="start_time">Start time</string>
    <string name="duration">Duration</string>
    <string name="scorecard">Scorecard</string>
    <string name="name">Name</string>
    <string name="last_online">Last online</string>

</resources>
