<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nu.ekskog.bitdisc.activities.CourseEditActivity">
    <item android:id="@+id/action_create_hole"
        android:title="@string/action_create_hole"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_set_map"
        android:title="@string/action_set_map"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_unset_map"
        android:title="@string/action_unset_map"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_save_course"
        android:title="@string/action_save_course"
        android:icon="@drawable/save"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />
</menu>
