<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    style="@style/bitdisc_activity"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/welcome"
        android:id="@+id/txt_heading" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="70dp" />

    <ImageView
        android:id="@+id/splash"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ufo"
        android:src="@drawable/ufo"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/games"
            android:id="@+id/btn_games" />

        <Button
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/courses"
            android:id="@+id/btn_courses" />

        <Button
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/players"
            android:id="@+id/btn_players" />

    </LinearLayout>
</LinearLayout>
