<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:id="@+id/user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/user_rank"
        android:layout_width="50dp"
        android:layout_height="fill_parent"
        android:text="@string/double_0"
        android:textSize="40sp"
        android:gravity="center_vertical|end" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:textSize="24sp"
        android:text="@string/user_name"
        android:gravity="start|center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <TextView
        android:id="@+id/user_value"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:textSize="20sp"
        android:text="@string/sixtyseven"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <ImageView
        android:contentDescription="@string/avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:src="@drawable/user"
        android:id="@+id/user_avatar" />

</LinearLayout>
