<nu.ekskog.bitdisc.game.GameScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nu.ekskog.bitdisc.game.GameEditActivity"
    style="@style/bitdisc_activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/header"
            android:text="@string/select_course" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner" />

        <TextView
            style="@style/header"
            android:text="@string/select_players" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/player_list">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/add_guest"
                android:id="@+id/btn_add_guest" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/add_player"
                android:id="@+id/btn_add_player" />

        </LinearLayout>

    </LinearLayout>

</nu.ekskog.bitdisc.game.GameScrollView>
