<nu.ekskog.bitdisc.game.GameScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nu.ekskog.bitdisc.course.CourseEditActivity"
    style="@style/bitdisc_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- steal focus -->
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px" />

        <TextView
            style="@style/header"
            android:text="@string/course_name" />

        <EditText
            android:id="@+id/input_name"
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

        <TextView
            style="@style/header"
            android:text="@string/city" />

        <EditText
            android:id="@+id/input_city"
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:id="@+id/course_map"
            android:contentDescription="@string/course_map" />

        <TextView
            style="@style/header"
            android:text="@string/holes" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/list_holes">
        </LinearLayout>

    </LinearLayout>

</nu.ekskog.bitdisc.game.GameScrollView>
