<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:id="@+id/hole_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="fill_parent"
        android:text="@string/double_0"
        android:id="@+id/hole_enum"
        android:textSize="40sp"
        android:gravity="center_vertical|end" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/hole_par"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:textSize="24sp"
            android:text="@string/par_4_hole"
            android:singleLine="false"
            android:gravity="start|center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/onehundreadanninety_meters"
            android:id="@+id/hole_distance" />

    </LinearLayout>
</LinearLayout>
